--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -151,7 +151,7 @@
 			//outline: 1px solid #EAEAEA;
 
 			word-wrap: break-word;
-    		overflow: hidden;
+			overflow: hidden;
 		}
 
 		>.breakdown {
@@ -259,12 +259,12 @@
 		//display: flex;
 		width: 100%;
 		position: sticky;
-    	top: 0;
-    	//z-index: 1;
-    	display: grid;
-    	line-height: 1.1em;
-    	//font-weight: bold;
-    	z-index: 1;
+		top: 0;
+		//z-index: 1;
+		display: grid;
+		line-height: 1.1em;
+		//font-weight: bold;
+		z-index: 1;
 
 		>div {
 			//display: flex;
@@ -290,44 +290,44 @@
 
 		.active &, &.link {
 
-	  		height: 1em;
-	  		opacity: 0.7;
-	  		padding: 0.35em;
+			height: 1em;
+			opacity: 0.7;
+			padding: 0.35em;
 
-	  		display: block;
+			display: block;
 
-	  		&:hover {
-	  			opacity: 1;
-	  		}
-	  		&:active {
-	  			color: #000000;
-	  		}
+			&:hover {
+				opacity: 1;
+			}
+			&:active {
+				color: #000000;
+			}
 
-	  		&.remove {
+			&.remove {
 				.fa-icon;
-		  		.fas;
-		  		&:before {
+				.fas;
+				&:before {
 					content: @fa-var-trash-alt;
 				}
 			}
 			&.add {
 				.fa-icon;
-		  		.fas;
-		  		&:before {
+				.fas;
+				&:before {
 					content: @fa-var-plus-circle;
 				}
 			}
 			&.edit {
 				.fa-icon;
-		  		.fas;
-		  		&:before {
+				.fas;
+				&:before {
 					content: @fa-var-pen;
 				}
 			}
 			&.reset {
 				.fa-icon;
-		  		.fas;
-		  		&:before {
+				.fas;
+				&:before {
 					content: @fa-var-eraser;
 				}
 			}
@@ -340,8 +340,8 @@
 			}
 			&.change_mode {
 				.fa-icon;
-		  		.fas;
-		  		&:before {
+				.fas;
+				&:before {
 					content: @fa-var-pen;
 				}
 			}
@@ -388,7 +388,7 @@
 		.content_data & {
 			//background-color: #74D6BA;
 			display: flex;
-    		flex-wrap: wrap;
+			flex-wrap: wrap;
 
 			>li {
 				//background-color: #D7B274;
@@ -441,3 +441,118 @@
 	.display_block {
 		display: block !important;
 	}
+
+
+
+// tooltip
+	.hidden_tooltip {
+		opacity: 0;
+		visibility: hidden;
+	}
+	.tooltip_toggle {
+		position: relative;
+
+		>.elements >.tooltip {
+			transition: all .5s ease;
+			position: absolute;
+			top: 6.25em;
+			z-index: 9999999999999999999;
+			background-color: rgba(0, 0, 0, 0.8);
+			color: #fff;
+			padding: 1em;
+			line-height: 1.5em;
+			border-radius: 5px;
+			font-size: .8em;
+			left: 0;
+			width: 100%;
+			max-width: 200px;
+			//display: block !important;
+
+
+			>.search_options_title_item {
+				display: grid;
+				grid-template-columns: 1fr 2fr;
+
+				>span:first-of-type {
+					text-align: center;
+					font-weight: bold;
+				}
+			}
+
+
+			&:after {
+				bottom: 100%;
+				left: 50%;
+				border: solid transparent;
+				content: " ";
+				height: 0;
+				width: 0;
+				position: absolute;
+				pointer-events: none;
+				//border-color: rgba(0, 0, 0, 0.8);
+				border-bottom-color: rgba(0, 0, 0, 0.8);
+				border-width: 10px;
+				margin-left: -10px;
+			}
+		}
+
+		&:hover >.elements >.tooltip {
+			visibility: visible;
+			opacity: 1;
+		}
+	}
+
+	/*
+	.tooltip_toggle {
+	  cursor: pointer;
+	  position: relative;
+	  z-index: 9999999999999999999;
+	}
+
+	.tooltip_toggle::before {
+	  position: absolute;
+	  top: -80px;
+	  left: -80px;
+	  background-color: green;
+	  border-radius: 5px;
+	  color: #fff;
+	  content: attr(data-tooltip);
+	  padding: 1rem;
+	  text-transform: none;
+	  -webkit-transition: all 0.5s ease;
+	  transition: all 0.5s ease;
+	  width: 15em;
+	}
+
+	.tooltip_toggle::after {
+	  position: absolute;
+	  top: -12px;
+	  left: 9px;
+	  border-left: 5px solid transparent;
+	  border-right: 5px solid transparent;
+	  border-top: 5px solid green;
+	  content: " ";
+	  font-size: 0;
+	  line-height: 0;
+	  margin-left: -5px;
+	  width: 0;
+	}
+
+	.tooltip_toggle::before,
+	.tooltip_toggle::after {
+	  color: #efefef;
+	  font-family: monospace;
+	  font-size: 16px;
+	  opacity: 0;
+	  pointer-events: none;
+	  text-align: center;
+	}
+
+	.tooltip_toggle:hover::before,
+	.tooltip_toggle:hover::after {
+	  opacity: 1;
+	  -webkit-transition: all 0.75s ease;
+	  transition: all 0.75s ease;
+	}
+	*/
+
