Fix CSS paths problem in main less and layout items

--- a/lib/dedalo/page/css/layout/fonts.less
+++ b/lib/dedalo/page/css/layout/fonts.less
@@ -1,9 +1,13 @@
-/*
-@import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700);
-*/
 
 
-@fonts_base_path : "./fonts";
+
+// @import url(http://fonts.googleapis.com/css?family=Oxygen:400,300,700);
+
+
+
+@fonts_base_path : "../fonts";
+
+
 
 // fontawesome
 	@import "@{fonts_base_path}/fontawesome/less/fontawesome.less";
@@ -23,6 +27,7 @@
 	    font-style: normal;
 	    font-display: fallback;
 }
+
 @font-face {
 		font-family: 'Oxygen-Bold';
 		src: url('@{fonts_base_path}/oxigen-webfont/oxygen-bold-webfont.eot');
@@ -35,6 +40,7 @@
 	    font-style: normal;
 	    font-display: fallback;
 }
+
 @font-face {
 		font-family: 'Oxygen-light';
 	    src: url('@{fonts_base_path}/oxigen-webfont/oxygen-light-webfont.eot');
@@ -47,6 +53,7 @@
 	    font-style: normal;
 	    font-display: fallback;
 }
+
 /*
 @font-face {
     font-family: 'san_francisco_displayregular';
@@ -61,7 +68,7 @@
 }*/
 
 
-	
+
 .global_font {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
