--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -1,6 +1,10 @@
 
 
 
+@import "../layout/fonts.less";
+
+
+
 // html inputs
 	input[type="text"], input[type="number"], input[type="url"], textarea, .contenteditable {
 		height: 2.5em;
@@ -23,7 +27,7 @@
 		align-content: stretch;
 		flex-wrap: wrap;
 		flex-flow: column;
-		width: 100%;		
+		width: 100%;
 	}
 	.section_group_body_base {
 		margin: 0;
