--- a/lib/dedalo/page/css/layout/reset.less
+++ b/lib/dedalo/page/css/layout/reset.less
@@ -1,4 +1,4 @@
-// Reset.
+// Reset
 // Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
 
 	html, body, div, span, applet, object,
