--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -9,7 +9,7 @@ html {
 
 // #main
 	#main {
-		transition: opacity 0.15s ; // linear
+		//transition: opacity 0.15s ; // linear
 		width: 100%;
     	display: grid;
 	}
@@ -18,7 +18,7 @@ html {
 
 // active. selected_wrap
 	.active {
-		transition: background-color 0.3s ease;
+		//transition: background-color 0.3s ease;
 		background-color: rgb(230, 230, 230) !important;
 	}
 // error
