Fix css issue on search list ul

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -104,7 +104,7 @@
 		}
 
 		// inside content_data
-		.content_data & {
+		>.content_data & {
 			margin-left: 0;
 		}
 
@@ -393,9 +393,11 @@
 		}//end .active &, &.link
 	}//end .button
 
+
+
 // ul inside content data
 	ul {
-		.content_data & {
+		.wrapper_component >.content_data & {
 			//background-color: #74D6BA;
 			display: flex;
 			flex-wrap: wrap;
