Reduce paginator size in page [css]

--- a/lib/dedalo/page/css/layout/paginator.less
+++ b/lib/dedalo/page/css/layout/paginator.less
@@ -53,8 +53,9 @@
 			min-height: 1.5em;
 			margin: 0;
 			padding: 0;
-			padding-left: 15px;
+			//padding-left: 1em;
 			position: relative;
+			font-size: 0.95em;
 		}
 		.css_wrap_rows_paginator_edit {
 			position: relative;
@@ -174,7 +175,10 @@
 
 		#go_to_page {
 			text-align: center;
-			padding: 0.17em;
-			margin-left: 2px;
+			padding: .25em;
+			margin-left: .5em;
+			width: 6em;
+			border-radius: .2em;
+			border: 1px solid #ececec;
 		}
 
