--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -50,21 +50,24 @@
 
 // section edit
 	.section.edit {
-		display: flex;
-		flex-wrap: wrap;
-		//&:before {
-		//	content: "Section edit";
-		//	font-weight: bold;
-		//	width: 100%;
-		//	padding: 1em;
-		//}
 
-		>*:not(.full_width) {
-			flex: 1;
-		}
+		>.content_data {
+			display: flex;
+			flex-wrap: wrap;
+			//&:before {
+			//	content: "Section edit";
+			//	font-weight: bold;
+			//	width: 100%;
+			//	padding: 1em;
+			//}
 
-		>.full_width {
-			width: 100%;
+			>*:not(.full_width) {
+				flex: 1;
+			}
+
+			>.full_width {
+				width: 100%;
+			}
 		}
 	}
 
@@ -72,20 +75,25 @@
 
 // section list
 	.section.list {
-		display: flex;
-		flex-wrap: wrap;
 
-		&:before {
-			content: "Section list";
-			font-weight: bold;
-			width: 100%;
-			padding: 1em;
-			flex-basis: 100%;
+		>.content_data {
+
+			display: flex;
+			flex-wrap: wrap;
+
+			&:before {
+				content: "Section list";
+				font-weight: bold;
+				width: 100%;
+				padding: 1em;
+				flex-basis: 100%;
+			}
+
+			>.full_width {
+				width: 100%;
+			}
 		}
 
-		>.full_width {
-			width: 100%;
-		}
 	}
 
 
@@ -116,7 +124,7 @@
 	.section_record.list {
 		position: relative;
 		background-color: #f7f7f7;
-		//display: block;
+		display: grid;
 		width: 100%;
 		height: 100%;
 		margin-right: 0.5em;
@@ -155,6 +163,8 @@
 			word-wrap: break-word;
 			overflow: hidden;
 
+
+
 			.component_autocomplete & {
 				display: inline-block;
 			}
@@ -168,6 +178,7 @@
 		>.breakdown {
 			padding: 0;
 		}
+
 	}
 
 
