--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -128,7 +128,7 @@
 		width: 100%;
 		height: 100%;
 		margin-right: 0.5em;
-		z-index: -1;
+		//z-index: -1;
 
 		outline: 1px solid #EAEAEA;
 
@@ -287,7 +287,7 @@
 		display: grid;
 		line-height: 1.1em;
 		//font-weight: bold;
-		z-index: -1;
+		//z-index: 1;
 
 		>div {
 			//display: flex;
@@ -446,8 +446,8 @@
 		}
 	}
 
-// page_container
-	.page_container {
+// page_wrapper
+	.page_wrapper {
 		display: grid;
 		padding: 1em;
 	}
