--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -35,7 +35,11 @@
 		padding: 10px;
 		position: relative;
 		width: 100%;
-		background-color: #00CA00;
+		//background-color: #00CA00;
+
+		&.hide {
+			padding: 0;
+		}
 
 		>.button_save_preset {
 			display: none;
