--- a/lib/dedalo/page/css/layout/reset.less
+++ b/lib/dedalo/page/css/layout/reset.less
@@ -18,6 +18,7 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
+		z-index: unset;
 	}
 
 	article, aside, details, figcaption, figure,
