Add sticky css to the list header

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -327,8 +327,8 @@
 		//display: flex;
 		width: 100%;
 		position: sticky;
-		top: 0;
-		//z-index: 1;
+		top: 55px;
+		z-index: 100;
 		display: grid;
 		line-height: 1.1em;
 		//font-weight: bold;
