Add page tool_container div

--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<?php echo $html_header ?>
+	<div id="tool_container" class="tool_container"></div>
 	<div id="main" class="hide"></div>
 	<div id="debug" class="debug hide"></div>
 </body>
