--- a/lib/dedalo/section_records/rows/html/rows_list.phtml
+++ b/lib/dedalo/section_records/rows/html/rows_list.phtml
@@ -1,51 +1,51 @@
 <?php
-	
-	# VISUALIZADOR HTML	
+
+	# VISUALIZADOR HTML
 	if(SHOW_DEBUG===true) {
 		#print "<!-- ROWS ROW [section_id.$section_id section_tipo.$section_tipo modo:$modo lang:$lang] -->";
-	}	
+	}
 
 
 	# HTML_CONTENT
 	$html_content   = '';
 	$html_content  .= '<tr class="row_tr_'.$id.'" data-dato=\''.$rel_locator.'\'>';
-	
+
 	switch(true) {
-			
+
 		case ($permissions===0):
 			$html_content .= "<span class=\"css_span_dato\"> ".label::get_label('sin_acceso')." </span>";
 			break;
-		
+
 		case ($permissions>=1):
-					
+
 			if( !is_array($ar_valor) || count($ar_valor)==0 ) {
-				
+
 				$html_content .= '<td class="section_list_td_border" data-tipo="'.$component_tipo.'">';
 				$html_content .= "No records found..";
 				$html_content .= '</td>';
-			
+
 			}else{
-			
+
 				# TD ID
 				# List line custom config
 				# dump($this->section_records_obj->options->list_line, ' this ++ '.to_string());
-				# dump($this, ' this ++ '.to_string());						
+				# dump($this, ' this ++ '.to_string());
 				$section_config = isset($_SESSION['dedalo4']['section_config'][$section_tipo]) ? $_SESSION['dedalo4']['section_config'][$section_tipo] : null;
 				$id_column_buttons_css='';
 				if(isset($section_config['list_line']) && $section_config['list_line']==='single') {
 					$id_column_buttons_css = 'id_column_buttons_single_line';
 				}
-										
+
 				$title = (SHOW_DEBUG===true) ? " id: $id" : null;
 				$html_content .= '<td class="section_list_td_border section_list_td_row id_column" title="'.$title.'">';
-					
+
 					#
 					# BUTTONS
-					# 
+					#
 					# dump($context, ' context ++ '.to_string());
 					switch ($context_name) {
-						
-						# LIST_INTO_TOOL_PORTAL : 
+
+						# LIST_INTO_TOOL_PORTAL :
 						# Listado de un sección mostrado en la ventana flotante de tool_portal para seleccionar un registro desde el portal
 						case 'list_into_tool_portal':
 							#
@@ -57,8 +57,8 @@
 								$url .= "&exclude_elements=".$context->exclude_elements;
 								#echo $url." <br>";
 								$title 	= "Goto resource $section_id [$id]";
-								if(SHOW_DEBUG===true) $title .= " url:$url  modo $modo, context_name $context->context_name";										
-								
+								if(SHOW_DEBUG===true) $title .= " url:$url  modo $modo, context_name $context->context_name";
+
 								$html_content .= "<a href=\"$url\" class=\"id_column_buttons button_edit link\" title=\"$title\">";
 									# SECTION_ID TEXT
 									$html_content .= '<span class="section_id_number">';
@@ -74,28 +74,28 @@
 								$locator = new locator();
 									$locator->set_section_id($id);
 									$locator->set_section_tipo($section_tipo);
-								
-								$rel_locator = json_encode($locator);									
+
+								$rel_locator = json_encode($locator);
 
 								$title = "Add resource to portal ";
 								$html_content .= "<a href=\"javascript:void(0);\" class=\"id_column_buttons button_add_resource link\" ";
 								$html_content .= "onclick=\"tool_portal.add_resource(this)\" ";
-								$html_content .= "data-rel_locator='{$rel_locator}'	";									
+								$html_content .= "data-rel_locator='{$rel_locator}'	";
 								$html_content .= "title=\"$title\">";
 								if(SHOW_DEBUG===true) {
 									#$html_content .= $context_name;
-								}								
+								}
 								$html_content .= "</a>";
 							break;
-						
+
 						case 'section_tool':
 
 							#
-							# SECTION TOOL: 
-							# Buttons calculated for section tool (tool_indexation, tool_transcription, tool_lang, etc..)									
+							# SECTION TOOL:
+							# Buttons calculated for section tool (tool_indexation, tool_transcription, tool_lang, etc..)
 								$tool_name  = $context->target_tool;
 
-								if(isset($context->target_component_tipo)){							
+								if(isset($context->target_component_tipo)){
 									$modelo_name= RecordObj_dd::get_modelo_name_by_tipo( $context->target_component_tipo, true );
 									$component 	= component_common::get_instance( $modelo_name,
 																				  $context->target_component_tipo,
@@ -113,15 +113,15 @@
 									$section->tool_section_tipo = $context->tool_section_tipo;
 									$tool = new $tool_name($section,'button');
 								}
-								
+
 								#dump($tool->get_html(), ' tool ++ '.to_string());
 
 								# Inverse locators info
 								#$section = section::get_instance($section_id, $section_tipo);
-								#$inverse_references = $section->get_inverse_references();								
+								#$inverse_references = $section->get_inverse_references();
 								#if (!empty($inverse_references)) {
-							
-								$html_content .= $tool->get_html();														
+
+								$html_content .= $tool->get_html();
 							break;
 
 						case 'list_into_tool_relation':
@@ -135,7 +135,7 @@
 								*/
 								$html_content .= "Por revisar";
 							#
-							# BUTTON ADD RELATION 
+							# BUTTON ADD RELATION
 								$title = "Add relation [$rel_locator]";
 								$html_content .= "<div class=\"icon_bs tool_relation_icon link\" ";
 								$html_content .= "data-id_matrix=\"{$id}\" ";
@@ -149,19 +149,19 @@
 								}
 								$html_content .= "</div>";
 							break;
-				
-						# SELECT_PARENT : Listado de un sección mostrado en una ventana flotante para seleccionar un registro 
+
+						# SELECT_PARENT : Listado de un sección mostrado en una ventana flotante para seleccionar un registro
 						case 'select_parent':
 							# SECTION_ID TEXT
 								$html_content .= "<span class='section_id_number'>";
 								$html_content .= $section_id;
-								$html_content .= "</span>"; 
+								$html_content .= "</span>";
 							#
 							# ADD PARENT BUTTON
-								$locator = new locator();									
+								$locator = new locator();
 									$locator->set_section_id($id);
 									$locator->set_section_tipo($section_tipo);
-								
+
 								$locator = json_handler::encode($locator);
 
 								$title = "Add parent";
@@ -175,19 +175,19 @@
 								$html_content .= "</a>";
 							break;
 
-						# SELECT_CHILDREN : Listado de un sección mostrado en una ventana flotante para seleccionar un registro 
+						# SELECT_CHILDREN : Listado de un sección mostrado en una ventana flotante para seleccionar un registro
 						case 'select_children':
 							# SECTION_ID TEXT
 								$html_content .= "<span class='section_id_number'>";
 								$html_content .= $section_id;
-								$html_content .= "</span>"; 
+								$html_content .= "</span>";
 							#
 							# ADD PARENT BUTTON
 								$locator = new locator();
 									$locator->set_type(DEDALO_RELATION_TYPE_CHILDREN_TIPO);
 									$locator->set_section_id($id);
 									$locator->set_section_tipo($section_tipo);
-								
+
 								$locator = json_handler::encode($locator);
 
 								$title = "Add children";
@@ -201,19 +201,19 @@
 								$html_content .= "</a>";
 							break;
 
-						# SELECT_RELATED : Listado de un sección mostrado en una ventana flotante para seleccionar un registro 
+						# SELECT_RELATED : Listado de un sección mostrado en una ventana flotante para seleccionar un registro
 						case 'select_related':
 							# SECTION_ID TEXT
 								$html_content .= "<span class='section_id_number'>";
 								$html_content .= $section_id;
-								$html_content .= "</span>"; 
+								$html_content .= "</span>";
 							#
 							# ADD PARENT BUTTON
 								$locator = new locator();
 									$locator->set_type(DEDALO_RELATION_TYPE_RELATED_TIPO);
 									$locator->set_section_id($id);
 									$locator->set_section_tipo($section_tipo);
-								
+
 								$locator = json_handler::encode($locator);
 
 								$title = "Add related term";
@@ -227,20 +227,20 @@
 								$html_content .= "</a>";
 							break;
 
-						# SELECT_RECORD: Listado de un sección mostrado en una ventana flotante para seleccionar un registro 
+						# SELECT_RECORD: Listado de un sección mostrado en una ventana flotante para seleccionar un registro
 						/* UNACTIVE
 						case 'select_record':
 							# SECTION_ID TEXT
 								$html_content .= "<span class='section_id_number'>";
 								$html_content .= " $section_id ";
-								$html_content .= "</span>"; 
+								$html_content .= "</span>";
 							#
-							# ADD PARENT BUTTON 
+							# ADD PARENT BUTTON
 								$locator = new locator();
 									$locator->set_type(DEDALO_RELATION_TYPE_RECORD_TIPO);
 									$locator->set_section_id($id);
 									$locator->set_section_tipo($section_tipo);
-								
+
 								$locator = json_handler::encode($locator);
 
 								$title = "Add record";
@@ -251,7 +251,7 @@
 								$html_content .= "</a>";
 							break;
 						*/
-						# SELECT_INDEX : Listado de un sección mostrado en una ventana flotante para seleccionar un registro 
+						# SELECT_INDEX : Listado de un sección mostrado en una ventana flotante para seleccionar un registro
 						case 'select_index':
 							# SECTION_ID TEXT
 								$html_content .= '<span class="section_id_number">';
@@ -262,8 +262,8 @@
 								$locator = new locator();
 									$locator->set_type(DEDALO_RELATION_TYPE_INDEX_TIPO);
 									$locator->set_section_id($id);
-									$locator->set_section_tipo($section_tipo);											
-								
+									$locator->set_section_tipo($section_tipo);
+
 								$locator = json_handler::encode($locator);
 
 								$title = "Add index";
@@ -276,13 +276,13 @@
 								}
 								$html_content .= "</a>";
 							break;
-						
+
 						default:
 
 							#
-							# BUTTON EDIT										
+							# BUTTON EDIT
 								$url  = htmlspecialchars("?t=$section_tipo&id=$id&m=edit");
-								$url .= "&top_tipo=".TOP_TIPO."&top_id=".TOP_ID."&offset=$offset";
+								$url .= "&top_tipo=".TOP_TIPO."&top_id=".$section_id."&offset=$offset";
 								$title = label::get_label('editar_registro').' '.$section_id;
 								#if(SHOW_DEBUG===true) $title .= " url:$url  modo $modo, context_name $context->name ";
 								$additional_css_style = $button_delete_permissions <=1 ? 'height: 100%;' : '' ;
@@ -295,9 +295,9 @@
 									}
 									$html_content .= "</span>";
 								$html_content .= "</a>";
-							
+
 							#
-							# BUTTON DELETE 
+							# BUTTON DELETE
 								if($button_delete_permissions >1){
 									$title = label::get_label('borrar').' '.$section_id;
 									$html_content .= "<a href=\"javascript:;\" class=\"id_column_buttons $id_column_buttons_css button_delete link\" ";
@@ -314,17 +314,17 @@
 								}
 							break;
 					}//end switch ($context->name) {
-					
+
 
 					# DEBUG INFO
 					if(SHOW_DEBUG===true) {
 						#$html_content .= " <span class=\"css_span_debugger\" id=\"debugger_{$id}\" >{$id}</span>";
-					}					
+					}
 
 				$html_content .= '</td>'; //end id_column
 
-				
-	
+
+
 				# TD DATOS
 				foreach($ar_valor as $component_tipo => $valor_list) {
 
@@ -349,11 +349,11 @@
 				}//end foreach($ar_valor as $component_tipo => $valor_list) {
 
 
-			}//end if( !is_array($ar_valor) || count($ar_valor)==0 ) 
+			}//end if( !is_array($ar_valor) || count($ar_valor)==0 )
 
 	}//end switch($permissions) {
 	$html_content .= '</tr>';
-	
+
 	# PRINT HTML
 	print $html_content;
 
